# Autonomous-Hiring-Agent

./: .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  README.md  package-lock.json  package.json
frontend/: .env.local.example  .gitignore  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/applications/: page.tsx
frontend/app/dashboard/chatbot/: page.tsx
frontend/app/dashboard/help/: page.tsx
frontend/app/dashboard/history/: page.tsx
frontend/app/dashboard/interview/: page.tsx
frontend/app/dashboard/notifications/: page.tsx
frontend/app/dashboard/profile/: page.tsx
frontend/app/dashboard/results/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/upload/: page.tsx
frontend/app/dashboard/uploads/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/sign-up/: page.tsx
frontend/components/: DashboardHeader.tsx  KeepAlive.tsx  Sidebar.tsx
frontend/lib/: api.ts  errors.ts
hiring-agent/: .env.example  .gitignore  PROJECT_STATUS.md  main.py  pyproject.toml  requirements.txt
hiring-agent/agents/: avatar_persona.py  chat_agent.py  detector.py  harness_agent.py  interviewer.py  learner.py  orchestrator.py  proctor_agent.py  researcher.py  scorer.py  silent_proctor.py
hiring-agent/connectors/: avatar_bridge.py  code_executor.py  csv_ingestor.py  email_service.py  feature_gate.py  knowledge_base.py  meeting_bot.py  portal_api.py  resume_parser.py  sql_executor.py  supabase_mcp.py  tts_service.py
hiring-agent/memory/: pageindex_store.py  session_store.py
hiring-agent/models/: applicant.py  avatar_session.py  dsa_problem.py  interview.py  interview_config.py  proctoring.py  score.py  subscription.py
hiring-agent/pipelines/: avatar_interview_flow.py  dsa_interview_flow.py  harness_pipeline.py  ingest.py  interview_flow.py  proctoring_pipeline.py  rank.py
hiring-agent/static/: dsa_platform.html  harness_dashboard.html  proctor_dashboard.html
hiring-agent/tests/: test_api.py  test_avatar_pipeline.py  test_detector.py  test_ingest.py  test_interview.py  test_scorer.py
hiring-agent/utils/: document_validator.py  logger.py  prompt_templates.py  rate_limiter.py
