[project]
name = "hiring-agent"
version = "0.1.0"
description = "Autonomous AI Hiring Agent"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # ── Groq (single LLM provider, all roles) ────
    "groq>=1.1.2",
    # ── Agent Frameworks ──────────────────────────
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    # ── FastAPI (applicant intake portal) ─────────
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",    # file upload support
    # ── Resume Parsing ────────────────────────────
    "pymupdf>=1.24.0",            # PDF parsing (fast & accurate)
    "python-docx>=1.1.0",         # DOCX resume support
    # ── CSV Ingestion ─────────────────────────────
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",            # Excel support for CSV ingestor
    # ── Supabase (Open Brain / MCP memory) ────────
    "supabase>=2.4.0",
    # ── PageIndex (vectorless reasoning-based RAG) ─
    "pageindex>=0.2.6",
    # ── AI & Plagiarism Detection ─────────────────
    "transformers>=4.41.0",
    "torch>=2.4.0",
    "accelerate>=0.30.0",
    # ── Data Validation & Processing ──────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "numpy>=1.26.0",
    # ── HTTP & Async Networking ───────────────────
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.3.0",
    # ── Utilities ─────────────────────────────────
    "ratelimit>=2.2.1",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "connectors",
    "models",
    "pipelines",
    "memory",
    "utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
