[project]
name = "hiring-agent"
version = "0.1.0"
description = "Autonomous AI Hiring Agent"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # ── Groq (single LLM provider, all roles) ────
    "groq>=1.1.2",
    # ── Agent Frameworks ──────────────────────────
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    # ── FastAPI (applicant intake portal) ─────────
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",    # file upload support
    # ── Resume Parsing ────────────────────────────
    "pymupdf>=1.24.0",            # PDF parsing (fast & accurate)
    "python-docx>=1.1.0",         # DOCX resume support
    "Pillow>=10.0.0",             # Image resize/normalise before sending to Groq vision
    # ── CSV Ingestion ─────────────────────────────
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",            # Excel support for CSV ingestor
    # ── Supabase (Open Brain / MCP memory) ────────
    "supabase>=2.4.0",
    # ── PageIndex (vectorless reasoning-based RAG) ─
    "pageindex>=0.2.6",
    # ── Avatar TTS (Microsoft Edge Neural TTS) ───────
    # Free, cloud-based, no model download, no GPU needed.
    # Provides word-boundary timing events for lip sync.
    "edge-tts>=6.1.9",         # Microsoft Edge Neural TTS (async, streaming)
    "pydub>=0.25.1",           # MP3 → WAV conversion (requires system FFmpeg)
    # ── Jitsi Meet Bot (Phase 4) ─────────────────────
    # Browser automation for bot participant + candidate audio capture.
    # After install: uv run playwright install chromium
    "playwright>=1.44.0",      # Headless Chromium for Jitsi bot participant
    # ── AI & Plagiarism Detection ─────────────────
    # Handled by Groq (llama-3.1-8b-instant) — local torch/transformers
    # removed (~500 MB saved, no active usage in codebase).
    # ── Data Validation & Processing ──────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "numpy>=1.26.0",
    # ── HTTP & Async Networking ───────────────────
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.3.0",
    # ── Utilities ─────────────────────────────────
    "ratelimit>=2.2.1",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.9.0",
    "loguru>=0.7.0",
    "rich>=13.7.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "connectors",
    "models",
    "pipelines",
    "memory",
    "utils",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
